--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,15 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "glob": "^11.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "sharp": "^0.33.4",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.7.0",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0"
   }
 }
